Bug 155887 - [WMF] Inserted picture ended with EOF with size !=3 not displayed
Summary: [WMF] Inserted picture ended with EOF with size !=3 not displayed
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2023-06-17 00:35 UTC by Bartosz
Modified: 2024-04-11 23:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
WMF Picture which is not displayed (17.63 KB, image/wmf)
2023-06-17 00:35 UTC, Bartosz
Details
How file should looks like (112.97 KB, image/png)
2023-06-17 00:39 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bartosz 2023-06-17 00:35:18 UTC
Created attachment 187952 [details]
WMF Picture which is not displayed

Inserted picture ended with EOF with size !=3 not displayed.

This is a clone of the OO ticket:
https://bz.apache.org/ooo/show_bug.cgi?id=42090
Comment 1 Bartosz 2023-06-17 00:39:41 UTC
Created attachment 187953 [details]
How file should looks like
Comment 2 Bartosz 2023-10-25 06:52:58 UTC
In MS Office if the invalid record is found, the content is displayed up to the wrong record.

Currently:
If wrong WMF record is found the image is not displayed at all.

Expected:
If wrong WMF record is found, the image is displayed up to the wrong WMF record.
Comment 3 Commit Notification 2023-10-28 09:07:25 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/00e02dd832988ec3e7f37569c932ed66e1eb6efd

tdf#155887 Add individual WMF records validation

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-10-29 10:19:24 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c75cac85230d3899fe9f5f5086c117e4e1e5d330

tdf#155887 WMF Fix displaying images with size of EOF other that 3

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.